- Implemented a hackish workaround for disabled tooltip controls on attribute and skill controls. Should fix #3414, most likely needs further work.
- Fixed behaviour of skill controls to properly refresh their rating when selecting a custom attribute for tests.
- Fixed a cost calculation for built-in weapon mounts.

Data Changes:
- Fixed incorrect underbarrel weapon name for the Nissan Optimum II that caused a crash. Fixes part of #3344
- Fixed incorrect bonus for the Delphi Paragon to apply to Threading actions instead of Compiling.
- Set the ammo type for the FN-AAL to Gyrojet. Possibly not correct, as there's no proper RAW on what ammo the weapon is supposed to fire. 
- Fixed incorrect price for the Reakt geneware. 
- Allowed the Peak-Discharge energy packs to be added as accessories to weapons with External Source ammo types. Fixes #3361.
- Fixed incorrect specialisation requirement for the Death Dealer quality.
- Fixed missing nuyen bp costs for the ShadowNET starter pack and Runnerhub Basic Gear Pack. Fixes #3368
- The Auto Injector Expension and Killswitch are now properly addable to the Autoinjector as child objects. They've been renamed to Expanded Reservoir and Killswitch, respectively. Fixes #3365
- Fixed issues with the Infected Optional Power qualities that prevented them being taken in create mode. Closes #3234
- Implemented the lifestyle discount for the Community Connection quality. Closes #3372
- Added a knowledge skill prompt for Zoology.
- Allowed the Aware quality to permit taking Mentor Spirits.
- The In Debt quality now reduces the karma that can be spent on nuyen, representing that the karma 'gained' through this quality has been spent on the increased nuyen, per RAW.
- Fixed a crash when adding the Rockblood Signature Armored Shirt.
- Fixed incorrect cost for the Fuchi Cyber-N.